--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <center>
 <hr size="10px" noshade  align=center width="900px" color="orange">
-	<h1>Welcome To WEB DEVELOP ABN By SURIBABU</h1>
+	<h1>Welcome To WEB DEVELOP ABN By VIJAY</h1>
 		<h1>Testing Packer AMI Creation</h1>
 <hr size="10px" noshade  align=center width="900px" color="orange">
 </center>
